<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <artifactId>integration</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>war</packaging>
	<parent>
	  <groupId>fr.unice.polytech.isa</groupId>
	  <artifactId>tcf-backend</artifactId>
	  <version>1.0-SNAPSHOT</version>
	</parent>
	<repositories>
		<repository>
            <id>apache-m2-snapshot</id>
            <name>Apache Snapshot Repository</name>
            <url>https://repository.apache.org/content/groups/snapshots</url>
        </repository>
        <repository>
		    <id>snapshots</id>
		    <name>erebe-vm23-snapshots</name>
		    <url>http://erebe-vm23.i3s.unice.fr/artifactory/libs-snapshot-local</url>
        </repository>
    </repositories>
	  <dependencies>
	    <dependency>
		  <groupId>fr.unice.polytech.isa</groupId>
		  <artifactId>webservice-module</artifactId>
		  <version>1.0-SNAPSHOT</version>
		  <type>war</type>
	     </dependency>
	     <dependency>
		  <groupId>fr.unice.polytech.isa</groupId>
		  <artifactId>interface-bank-module</artifactId>
		  <version>1.0-SNAPSHOT</version>
	     </dependency>
	     <dependency>
		  <groupId>fr.unice.polytech.isa</groupId>
		  <artifactId>interface-client-module</artifactId>
		  <version>1.0-SNAPSHOT</version>
	     </dependency>
	     <dependency>
            <groupId>fr.unice.polytech.isa</groupId>
            <artifactId>cc-module</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>fr.unice.polytech.isa</groupId>
            <artifactId>catalogue-module</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>fr.unice.polytech.isa</groupId>
            <artifactId>kitchen-module</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>fr.unice.polytech.isa</groupId>
            <artifactId>entities-module</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
      </dependencies>
	<build>
	  <finalName>integration</finalName>
	  <plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>2.17</version>
			<configuration>
				<reuseForks>false</reuseForks>
			</configuration>
			<executions>
				<execution>
					<id>integration-test</id>
					<goals>
                        <goal>test</goal>
					</goals>
					<phase>integration-test</phase>
					<configuration>
						<sources>
							<source>src/test/java/integration</source>
						</sources>
						<excludes>
							<exclude>**/*Test.java</exclude>
						</excludes>
						<includes>
							<include>**/*IntegrationTest.java</include>
						</includes>
					</configuration>
				</execution>
			</executions>
		</plugin>
		
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.openejb.maven</groupId>
                <artifactId>tomee-maven-plugin</artifactId>
                <version>${versions.tomee.embedded}</version>
                <configuration>
                    <!-- From TomEE to TomEE+ to support the web services stack -->
                    <tomeeClassifier>plus</tomeeClassifier>
                    <args>-Xmx512m -XX:PermSize=256m</args>
                    <deployOpenEjbApplication>true</deployOpenEjbApplication>
                </configuration>
            </plugin>
	  </plugins>
	</build>
</project>

